0.75
- BUG: el tamano del paquete se tiene en cuenta en el
  calculo del CRC, deberia disminuir los falsos positivos.
- SOPORTE: uso clock_gettime instead of gettimeofday.
- ADD: añadida filtersicsacout
- ADD: añadido enviar versión al hacer ftp

0.74
- SOPORTE: añadido un conversor entre GPS y versión asterix
  de ERA.

0.73
- BUG: cuando en un paquete udp había más de un mensaje
  encapsulado y eran de distintas categorías, el segundo
  se tiraba. Esto afectaba especialmente a Montejunto, Foia,
  etc, porque encapsulaban un cat02+cat01...

0.72
- SOPORTE: para CAT10, client soporta el canal operativo.
- SOPORTE: añadida utilidad para eliminar categorías asterix
  de archivos GPS.
- SOPORTE: Añadido el sic de Lanzarote (198)

0.71
- SOPORTE: para CAT10, se envían a cálculo de demoras los
  DETECTION y los SUC. Antes solo los DETECTION, pero durante
  mucho tiempo en aeropuertos pequeños no hay blancos.
- BUG: log_flush() después de log_printf en updatecalculations
  para ver el progreso cuando se usa --stdout con --mysql-xxxx
- BUG: áñade 10 microsegs antes de cada sendto para que la pila
  udp no tire los paquetes por overflow al enviar de fichero.

0.70
- SOPORTE reader_network: retry ftp upload once
- BUG: disable CURLOPT_FTP_USE_EPRT, so it works with new
  REDAN proxy/nat version
- BUG: disabled cat21 decoding, only support for v0.23, and
  now we are having v2.1_gccx and v0.26_lemd

0.69
- SOPORTE: define mysql host, port, user, passwd in commandline
- BUG: remove region from reader_rrd3 when exporting bds30
- BUG: now ftp transfers are active. Disabled EPASV/PASV.
- SOPORTE: added Fuerteventura in sacsic.c
- BUG: missing Fuerteventura PV in sacsic.c
- TODO: finish database storage of reader_rrd3

0.68beta6
- BUG: asterix_versions was disabled. fixed.

0.68beta5
- BUG: reader_rrd3 default timestamp was 0, return to
  seconds from midnight of current day.
- SOPORTE: added filtercat, to filter gps files by category.
- BUG: added Taborno in sacsic.c